clusters/bingxing/destinationrules/kimi-router-ha-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kimi-router-ha-dr
  namespace: higress-system
spec:
  host: kimi-router-ha-cluster.local
  trafficPolicy:
    connectionPool:
      http:
        h2UpgradePolicy: UPGRADE
        http1MaxPendingRequests: 30000
        http2MaxRequests: 30000
        maxRequestsPerConnection: 0
      tcp:
        maxConnections: 10000
    loadBalancer:
      consistentHash:
        httpHeaderName: x-hash-header
